added error handling to experience controller/service